feat: implement cookie usage, tested in postman. One todo